[package]
name = "lightning-warning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["blocking"]}
postgrest = "1.0"
tokio = { version = "1.37.0", features = ["macros"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
geoutils = "0.5.1"
