[package]
name = "lightning-warning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = { version = "0.11.27", features = ["blocking"]}
postgrest = "1.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
geoutils = "0.5.1"
env_logger = "0.11.3"
log = "0.4.21"
